--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lightningcss": "^1.30.2",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-date-object": "^2.1.9",
