--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "prisma:studio": "prisma studio",
     "db:seed": "prisma db seed"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@next/bundle-analyzer": "^16.0.1",
