--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@next/bundle-analyzer": "^16.0.1",
     "@prisma/client": "^6.19.0",
+    "@supabase/supabase-js": "^2.81.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "bcrypt": "^6.0.0",
